--- a/src/app/api-key-form/api-key-form.component.html
+++ b/src/app/api-key-form/api-key-form.component.html
@@ -14,5 +14,4 @@
  (click)="getStats()">Get my stats!</button>
 
  <p> Fetched key {{ x }} times</p>
- 
- <app-main-statistics></app-main-statistics>
+ <p> Backend content is {{ content }} </p>
