--- a/src/app/api-key-form/api-key-form.component.html
+++ b/src/app/api-key-form/api-key-form.component.html
@@ -14,4 +14,4 @@
  (click)="getStats()">Get my stats!</button>
 
  <p> Fetched key {{ x }} times</p>
- <p> Backend content is {{ content }} </p>
+ <div style="word-wrap: break-word;"> Backend content is {{ content }} </div>
