--- a/src/app/tag-stats/tag-stats.component.html
+++ b/src/app/tag-stats/tag-stats.component.html
@@ -2,24 +2,24 @@
   <h2>Some statistics on your most popular tags</h2>
   <div class="row">
     <div class="col-sm-4">
-      <app-tag-stats-card [statsElement]="mostCommentedTag" [numberFormat]="normalFormat"></app-tag-stats-card>
+      <app-tag-stats-card [statsElement]="mostViewedTag" [numberFormat]="normalFormat" [tagList]="fiveMostViewedTags"></app-tag-stats-card>
     </div>
     <div class="col-sm-4">
-      <app-tag-stats-card [statsElement]="mostReactedTag" [numberFormat]="normalFormat"></app-tag-stats-card>
+      <app-tag-stats-card [statsElement]="mostReactedTag" [numberFormat]="normalFormat" [tagList]="fiveMostReactedTags"></app-tag-stats-card>
     </div>
     <div class="col-sm-4">
-      <app-tag-stats-card [statsElement]="mostViewedTag" [numberFormat]="normalFormat"></app-tag-stats-card>
+      <app-tag-stats-card [statsElement]="mostCommentedTag" [numberFormat]="normalFormat" [tagList]="fiveMostCommentedTags"></app-tag-stats-card>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <app-tag-stats-card [statsElement]="tagWithMostCommentsPerArticle" [numberFormat]="normalFormat"></app-tag-stats-card>
+      <app-tag-stats-card [statsElement]="tagWithMostViewsPerArticle" [numberFormat]="normalFormat" [tagList]="fiveTagsWithMostViewsPerArticle"></app-tag-stats-card>
     </div>
     <div class="col-sm-4">
-      <app-tag-stats-card [statsElement]="tagWithMostReactionsPerArticle" [numberFormat]="normalFormat"></app-tag-stats-card>
+      <app-tag-stats-card [statsElement]="tagWithMostReactionsPerArticle" [numberFormat]="normalFormat" [tagList]="fiveTagsWithMostReactionsPerArticle"></app-tag-stats-card>
     </div>
     <div class="col-sm-4">
-      <app-tag-stats-card [statsElement]="tagWithMostViewsPerArticle" [numberFormat]="normalFormat"></app-tag-stats-card>
+      <app-tag-stats-card [statsElement]="tagWithMostCommentsPerArticle" [numberFormat]="normalFormat" [tagList]="fiveTagsWithMostCommentsPerArticle"></app-tag-stats-card>
     </div>
   </div>
 </div>
