add modal: About me

--- a/src/app/api-key-form/api-key-form.component.html
+++ b/src/app/api-key-form/api-key-form.component.html
@@ -3,6 +3,7 @@
   <h1>Welcome to <a href="https://dev.to/sandordargo">
     <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" style="width:1.25 em; height:auto" alt="Sandor Dargo's DEV Profile" height="30" width="30">
     </a>Analytics
+    <button class="btn btn-lg btn-outline-primary" (click)="open()" style="float: right;">About</button>
   </h1>
   </div>
   <div class="container">
